--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'  # 设置所需的 Node.js 版本
+
     - name: Deploy files to server
       run: |
         scp -r /dist/* user@${{secrets.APPLE_HOST}}:${{secrets.APPLE_LOCATION}}
