--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,36 @@
-name: Deploy to Server
-
+name: Build app and deploy to Tencent
 on:
+  #监听push操作
   push:
     branches:
+      # mian分支，你也可以改成其他分支
       - main
-
 jobs:
-  deploy:
+  # 任务ID
+  build:
+    # 运行环境
     runs-on: ubuntu-latest
-
+    # 步骤
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'  # 设置所需的 Node.js 版本
-
-    - name: Deploy files to server
-      run: |
-        scp -r ./dist/* user@${{secrets.APPLE_HOST}}:${{secrets.APPLE_LOCATION}}
+    # 使用别人的action
+    - uses: actions/checkout@v2
+    # 步骤名称
+    - name: npm install
+      # 步骤执行指令
+      run: npm install
+    - name: npm run build
+      run: npm run build
+    # 命名这个任务为发布Deploy
+    - name: Deploy
+      # 因为构建之后，需要把代码上传到服务器上，所以需要连接到ssh，并且做一个拷贝操作
+      uses: cross-the-world/scp-pipeline@master
       env:
-        SSH_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+        WELCOME: "ssh scp ssh pipelines"
+        LASTSSH: "Doing something after copying"
+      with:
+        host: ${{ secrets.APPLE_HOST }}
+        user: root
+        pass: ${{ secrets.APPLE_PASSWORD }}
+        connect_timeout: 10s
+        local: './dist/*'
+        remote: ${{APPLE_LOCATION}}
